--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
   },
   "homepage": "https://github.com/CSJL75/ColoresCH#readme",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.0",
+    "express-session": "^1.18.1",
     "helmet": "^8.1.0",
-    "mysql2": "^3.14.0"
+    "mysql2": "^3.14.0",
+    "nodemailer": "^6.10.1"
   }
 }
