--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-session": "^1.18.1",
     "helmet": "^8.1.0",
     "mysql2": "^3.14.0",
-    "nodemailer": "^6.10.1"
+    "nodemailer": "^6.10.1",
+    "sweetalert2": "^11.21.0"
   }
 }
